change readme, package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/anatolpa/awesomecms-template-anatolpa.git"
   },
-  "author": "",
+  "author": "Anatoly Pavlishen",
   "license": "BSD",
   "bugs": {
     "url": "https://github.com/anatolpa/awesomecms-template-anatolpa/issues"
