--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "gulp": "~3.4.1",
     "gulp-jade": "~0.3.0",
     "gulp-sass": "~0.4.1"
+  },
+  "devDependencies": {
+    "csscomb": "~2.0.4"
   }
 }
