--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "gulp-minify-css": "~0.2.0",
     "gulp": "~3.4.1",
     "gulp-jade": "~0.3.0",
-    "gulp-sass": "~0.4.1"
+    "gulp-sass": "~0.4.1",
+    "gulp-concat": "~2.1.7"
   },
   "devDependencies": {
-    "csscomb": "~2.0.4"
+    "csscomb": "~2.0.4",
+    "gulp-imagemin": "~0.1.5"
   }
 }
