--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
-  "name": "awesomecms-template-anatolpa",
-  "version": "0.0.1",
-  "description": "Awesomecms template for Awesome CMS",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/anatolpa/awesomecms-template-anatolpa.git"
-  },
-  "author": "Anatoly Pavlishen",
-  "license": "BSD",
-  "bugs": {
-    "url": "https://github.com/anatolpa/awesomecms-template-anatolpa/issues"
-  },
-  "homepage": "https://github.com/anatolpa/awesomecms-template-anatolpa",
-  "dependencies": {
-    "gulp-rename": "~0.2.2",
-    "gulp-uglify": "~0.1.0",
-    "gulp-clean": "~0.2.3",
-    "gulp-minify-css": "~0.2.0",
-    "gulp": "~3.4.1",
-    "gulp-jade": "~0.3.0",
-    "gulp-sass": "~0.4.1",
-    "gulp-concat": "~2.1.7"
-  },
-  "devDependencies": {
-    "csscomb": "~2.0.4",
-    "gulp-imagemin": "~0.1.5"
-  }
+    "name"           : "awesomecms-template-anatolpa",
+    "version"        : "0.0.1",
+    "description"    : "Awesomecms template for Awesome CMS",
+    "main"           : "index.js",
+    "scripts"        : {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository"     : {
+        "type": "git",
+        "url" : "https://github.com/anatolpa/awesomecms-template-anatolpa.git"
+    },
+    "author"         : "Anatoly Pavlishen",
+    "license"        : "BSD",
+    "bugs"           : {
+        "url": "https://github.com/anatolpa/awesomecms-template-anatolpa/issues"
+    },
+    "homepage"       : "https://github.com/anatolpa/awesomecms-template-anatolpa",
+    "dependencies"   : {
+        "gulp-rename"    : "*",
+        "gulp-uglify"    : "*",
+        "gulp-clean"     : "*",
+        "gulp-minify-css": "*",
+        "gulp"           : "*",
+        "gulp-jade"      : "*",
+        "gulp-sass"      : "*",
+        "gulp-concat"    : "*",
+        "gulp-imagemin"  : "*",
+        "gulp-livereload": "*",
+        "tiny-lr"        : "*",
+        "gulp-cache"     : "*",
+        "gulp-jshint"    : "*",
+        "gulp-notify"    : "*"
+    },
+    "devDependencies": {
+
+    }
 }
